# 02-ad-hd

./: .gitignore  README.md  README.md.backup  pyproject.toml  requirements.txt
notebooks/: 1. Anomaly Detection in HPC Centers.ipynb  2. Gaussian Mixture Models.ipynb  3. GMMs for Anomaly Detection.ipynb  4. Autoencoders for Anomaly Detection.ipynb
notebooks/util/: util.py
